--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: tzupdater
 Type: Package
-Title: Automatically download and compile tz database from the IANA website
+Title: Automatically Download and Compile Tz Database from the IANA Website
 Version: 0.1.0
 Author: Sebastien Thonnard
 Maintainer: Sebastien Thonnard <sebastien.thonnard@icloud.com>
-Description: This package allows a user to download and compile any version of the IANA Time Zone Database (also known as Olson database) and make it current in his R session. This will NOT replace the system tz database. Changes can be undone by restarting a new session.
-License: MIT
+Description: Download and compile any version of the IANA Time Zone Database (also known as Olson database) and make it current in your R session. This will NOT replace the system tz database. Changes can be undone by restarting a new session.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Imports:
+ utils
