--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,13 @@
 Package: tzupdater
 Type: Package
-Title: Automatically Download and Compile Tz Database from the IANA Website
+Title: Automatically Download and Compile Time Zone Database from the IANA Website
 Version: 0.1.0
 Author: Sebastien Thonnard
 Maintainer: Sebastien Thonnard <sebastien.thonnard@icloud.com>
-Description: Download and compile any version of the IANA Time Zone Database (also known as Olson database) and make it current in your R session. This will NOT replace the system tz database. Changes can be undone by restarting a new session. Beware: on Windows Cygwin is required!
+Description: Download and compile any version of the 
+  IANA Time Zone Database (also known as Olson database)
+  and make it current in your R session.
+  Beware: on Windows 'Cygwin' is required!
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
