--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tzupdater
 Type: Package
-Title: Automatically Download and Compile Time Zone Database from the IANA Website
+Title: Time Zone Database Updater
 Version: 0.1.0
 Author: Sebastien Thonnard
 Maintainer: Sebastien Thonnard <sebastien.thonnard@icloud.com>
